--- a/PSAI.vcxproj
+++ b/PSAI.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="conversion.c" />
     <ClCompile Include="data.c" />
+    <ClCompile Include="debug.c" />
     <ClCompile Include="execution.c" />
     <ClCompile Include="inout.c" />
     <ClCompile Include="main.c" />
@@ -28,6 +29,7 @@
   <ItemGroup>
     <ClInclude Include="conversion.h" />
     <ClInclude Include="data.h" />
+    <ClInclude Include="debug.h" />
     <ClInclude Include="execution.h" />
     <ClInclude Include="inout.h" />
   </ItemGroup>
@@ -85,6 +87,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
